ingress-routing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-jenkins_username
  namespace: default
spec:
  rules:
  - host: jenkins_username.eqslearning.com
    http:
      paths:
      - backend:
          serviceName: helloworld-jenkins_username
          servicePort: 8080
